--- a/style.css
+++ b/style.css
@@ -23,11 +23,12 @@ body {
 header {
     background: linear-gradient(rgba(3, 0, 3), rgb(78, 8, 85, 0.7)), url('#') no-repeat center center/cover;
     color: white;
-    padding: 15px 0;
+    padding: 0 0;
     position: sticky;
     top: 0;
     z-index: 100;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
 }
 
 .header-container {
@@ -37,7 +38,7 @@ header {
 }
 
 header img {
-    max-width: 180px;
+    max-width: 250px;
     height: auto;
 }
 
